# embeddings.cpp

./: .dockerignore  .gitignore  .gitmodules  0001-feat-add-debug-support-for-only-cpu-backend.patch  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  REPORT_20260417.md  bert.cpp  bert.h  cli.cpp  gte.cpp  gte.h  jina_bert.cpp  jina_bert.h  main.cpp  pybind.cpp  pyproject.toml  quantize.cpp  setup.py  tokenizer.cpp  tokenizer.h  utils.cpp  utils.h
.github/workflows/: browser-e2e.yml  build-python-wheels.yml  publish-python-package.yml  publish-server-image.yml  publish-web-package.yml  upload-gguf-to-hf.yml  upload-web-assets-to-hf.yml
.vendor/: ggml-upstream.json
benchmarks/: README.md  STANDARD.md  bge-m3.md
demo/browser-wasm/: index.html  sw.js
docs/: BROWSER_BENCHMARK.md  GGML_OVERLAY_PATCHES.md  GGML_UPSTREAM.md  PRODUCTIZATION.md  SNOWFLAKE_GGML_B8833_NOTES.md  SNOWFLAKE_NPM_PACKAGE.md  TEST_MATRIX.md
docs/huggingface/bge-m3-gguf/: README.md
docs/huggingface/snowflake-arctic-embed-m-v2.0-gguf/: README.md
embeddings_cpp/: _C.pyi  __init__.py  hub.py  registry.json  registry.py  server.py
ggml/include/: ggml.h
ggml/src/: ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp  ops.h  repack.cpp
ggml/src/ggml-cuda/: mmq.cuh
ggml/src/ggml-webgpu/: CMakeLists.txt  ggml-webgpu-shader-lib.hpp  ggml-webgpu.cpp
ggml/src/ggml-webgpu/wgsl-shaders/: gte_add_norm_affine.wgsl  gte_cls_pool.wgsl  gte_geglu.wgsl  gte_norm_affine.wgsl  gte_qkv_rope.wgsl
include/: bert.h  tokenizer.h  transformer.h  utils.h
scripts/: ALIGNMENT_README.md  QUANTIZATION_COMPARISON_README.md  alignment.ipynb  alignment.py  benchmark.py  bge_m3_eval.py  browser_e2e_compare.py  browser_runtime_regression.mjs  browser_wasm_bench_server.py  build_browser_dynamic.sh  build_gguf_artifact.py  check_version.py  convert.py  convert_jina_clip.ipynb  convert_snowflake.ipynb  correctness.py  embedding_eval_common.py  ggml_upstream.py  model_bench.py  models.txt  profile_snowflake.py  prompts.txt  registry_models.txt  render_hf_readme.py  requirements.txt  resolve_version.py  run_browser_cases.mjs  run_browser_wasm_bench.mjs  run_macmini_browser_bench.sh  run_macmini_browser_matrix.sh  server_compare.py  set_version.py  smoke_web_package.mjs  wasm_bench_page.html  wasm_encode_page.html  wasm_persistent_encode_page.html
scripts/data/: snowflake_wasm_batch1.txt  snowflake_wasm_batch8.txt  snowflake_wasm_short8.txt
src/: base_model.cpp  base_model.h  bert.cpp  bert.h  constants.h  embeddings_pybind.cpp  factory.cpp  factory.h  gguf_utils.h  gte.cpp  gte.h  jina_bert.cpp  jina_bert.h  pybind.cpp  quantize.cpp  tokenizer.cpp  tokenizer.h  transformer.cpp  utils.cpp  wasm_bench.cpp  wasm_model_bench.cpp  wasm_model_encode.cpp  wasm_model_runner.cpp
tests/: test.py  test_bge_m3_eval.py  test_embedding.cpp  test_embedding.py  test_model_bench.py  test_registry.py  test_render_hf_readme.py  test_setup_build.py  test_tokenizer.cpp  test_tokenizer.py
